--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,6 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
 }
 
 /* Skip to Main Content */
@@ -67,18 +65,18 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 20px;
+    margin-right: 20px; 
 }
 
 nav ul li a {
     display: block;
     padding: 10px 15px;
     color: white;
-    font-size: 0.5em;
-    text-transform: uppercase;
+    font-size: 1.2em;
     letter-spacing: 0.5px;
     transition: background-color 0.3s ease;
     text-decoration: none;
+    text-align: center;
 }
 
 nav ul li a:hover,
@@ -89,14 +87,17 @@ nav ul li a.active {
     border-radius: 5px;
 }
 
+/* Top Navigation Menu with Current Page Indication */
+nav ul li a.current {
+    background-color: #FFCB05; /* Highlight color for the current page */
+    color: #00274C;
+    border-radius: 5px;
+}
+
 /* Main Content */
 main {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    padding: 40px 20px;
-    max-width: 1200px;
-    margin: 20px auto;
+    padding: 50px;
+    margin: 20px 40px;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -104,20 +105,20 @@ main {
 
 
 h1 {
-    font-size: 3em;
+    font-size: 4.5em;
     text-align: center;
     color: #00274C;
     margin-top: 20px;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 3em;
     text-align: center;
     color: #00274C;
 }
 
 main h2 {
-    font-size: 2em;
+    font-size: 2.5em;
     color: #00274C;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -127,14 +128,14 @@ main h2 {
 }
 
 main h3 {
-    font-size: 1.8em;
+    font-size: 2em;
     color: #004F71;
     margin-bottom: 15px;
     grid-column: span 2;
 }
 
 main h4 {
-    font-size: 1.5em;
+    font-size: 1.7em;
     color: #004F71;
     margin-bottom: 10px;
     grid-column: span 2;
@@ -142,7 +143,7 @@ main h4 {
 }
 
 main p {
-    font-size: 1.2em;
+    font-size: 1.5em;
     line-height: 1.8;
     margin-bottom: 20px;
     color: #333;
@@ -160,11 +161,11 @@ main ul {
 
 /* Styling for list items */
 main ul li {
-    font-size: 1.2em;
+    font-size: 1.5em;
     margin-bottom: 10px;
     padding-left: 10px;
     position: relative;
-    color: #00274C;
+    color: #333;
 }
 
 /* Custom bullets for list items */
@@ -178,23 +179,6 @@ main ul li::before {
 }
 
 
-@media (min-width: 320px) {
-    main {
-        grid-template-columns: 1fr;
-        padding: 20px;
-    }
-
-    main h2,
-    main h3,
-    main p,
-    main ul {
-        grid-column: span 1;
-    }
-
-    h1 {
-        font-size: 2.5em;
-    }
-}
 
 
 /* Footer Styles */
@@ -208,8 +192,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    min-width: 320px;
-    margin: 0 auto;
+    text-align: center;
 }
 
 .footer-section {
@@ -221,7 +204,7 @@ footer {
 .footer-section h3 {
     font-weight: bold;
     margin-bottom: 10px;
-    font-size: 0.7em;
+    font-size: 1.2em;
     border-bottom: 1px solid #FFCB05;
     padding-bottom: 10px;
     display: inline-block;
@@ -231,7 +214,7 @@ footer {
 .footer-section p,
 .footer-section a {
     color: white;
-    font-size: 0.5em;
+    font-size: 1em;
     margin-bottom: 10px;
 }
 
@@ -251,7 +234,7 @@ footer {
 .footer-section ul li a {
     color: white;
     text-decoration: none;
-    font-size: 0.5em;
+    font-size: 1em;
 }
 
 .footer-section ul li a:hover {
@@ -271,28 +254,11 @@ footer {
 }
 
 .footer-bottom p {
-    font-size: 0.5em;
+    font-size: 0.8em;
     margin: 0;
 }
 
 
-@media (min-width: 769px) {
-    .footer-container {
-        flex-direction: row;
-        text-align: left;
-    }
-}
-
-@media (min-width: 320px) {
-    .footer-container {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .footer-section {
-        margin-bottom: 0px;
-    }
-}
 
 
 /* Images */
@@ -328,6 +294,36 @@ button:hover,
 a:hover {
     background-color: #FFCB05;
     color: #00274C;
+}
+
+@media screen and (min-width: 800px) {
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 50px;
+
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 50px;
+
+    }
+}
+
+@media screen and (min-width: 1500px) {
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 50px;
+
+    }
 }
 
 
